Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/SMAX_PS_IntegrationError__c.object-meta.xml
<CustomObject>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>IE-{0000000000}</displayFormat>
        <label>Integration Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>