Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>