Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_InventoryCount__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_InventoryCount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Count</label>
    <referenceTo>SMAX_PS_InventoryCount__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>