Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>SVMXC__Proforma_Invoice__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>