Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_My_Integration_Errors__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_My_Integration_Errors__c</fullName>
    <description>My integration errors indicator used for download criteria.</description>
    <formula>IF($User.Id=SMAX_PS_WorkOrder__r.SVMXC__Group_Member__r.SVMXC__Salesforce_User__r.Id, TRUE, FALSE) ||
IF($User.Id=SMAX_PS_WorkDetail__r.CreatedById, TRUE, FALSE) ||
IF($User.Id=SMAX_PS_PartsOrder__r.CreatedById, TRUE, FALSE)</formula>
    <label>My Integration Errors</label>
    <type>Checkbox</type>
</CustomField>