Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_PartsOrder__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PartsOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Parts Order</description>
    <inlineHelpText>Lookup to Parts Order</inlineHelpText>
    <label>Parts Order</label>
    <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>