Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_RelatedElementIdentifier__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_RelatedElementIdentifier__c</fullName>
    <description>Identifier value for the related element, used for filling in a Lookup field.</description>
    <inlineHelpText>Identifier value for the related element, used for filling in a Lookup field.</inlineHelpText>
    <label>Related Element Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>