Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_RelatedElementType__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_RelatedElementType__c</fullName>
    <description>Type of Identifier value for the related element, used for filling in a Lookup field.</description>
    <inlineHelpText>Type of Identifier value for the related element, used for filling in a Lookup field.</inlineHelpText>
    <label>Related Element Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkOrderId</fullName>
            </value>
            <value>
                <fullName>ServiceOrderNumber</fullName>
            </value>
            <value>
                <fullName>WorkDetailId</fullName>
            </value>
            <value>
                <fullName>PartsOrderId</fullName>
            </value>
            <value>
                <fullName>PartsOrderNumber</fullName>
            </value>
            <value>
                <fullName>StockTransferId</fullName>
            </value>
            <value>
                <fullName>ContactId</fullName>
            </value>
            <value>
                <fullName>ContactNumber</fullName>
            </value>
            <value>
                <fullName>InventoryCountId</fullName>
            </value>
            <value>
                <fullName>InvoiceId</fullName>
            </value>
            <value>
                <fullName>InvoiceNumber</fullName>
            </value>
            <value>
                <fullName>CaseId</fullName>
            </value>
            <value>
                <fullName>ServiceContractId</fullName>
            </value>
            <value>
                <fullName>QuoteId</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>