Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_StockTransfer__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_StockTransfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Transfer</label>
    <referenceTo>SVMXC__Stock_Transfer__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>