Perkin-UAT/force-app/main/default/objects/SMAX_PS_IntegrationError__c/fields/SMAX_PS_TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>